# SF-HACKS

./: pyproject.toml
code/: __init__.py  database.db  models.py  tviews.py  views.py
code/static/: style.css
code/templates/: Careers.html  Resources.html  index.html  signin.html  signup.html
