[tool.poetry]
name = "repl_python3_beta_SF-HACKS"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
auth = "^0.5.3"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
views = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
